<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lay_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xl.lab1.MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/sysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_title"/>

    <TextView
        android:id="@+id/text_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_ID"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_inputID"
        app:layout_constraintBottom_toBottomOf="@id/text_inputID"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
       />

    <EditText
        android:id="@+id/text_inputID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_ID"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/text_ID"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toTopOf="@+id/ido"
        app:layout_constraintTop_toTopOf="@+id/text_input_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/text_input_password"/>

    <EditText
        android:id="@+id/text_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/input_password"
        app:layout_constraintTop_toBottomOf="@+id/text_inputID"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/text_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ido"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_password"
        app:layout_constraintRight_toLeftOf="parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/student_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintRight_toLeftOf="@+id/staff_id"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:text="@string/student"/>
        <RadioButton
            android:id="@+id/staff_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/student_id"
            android:layout_marginLeft="10dp"
            android:text="@string/staff"/>
    </RadioGroup>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/Button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ido"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
            <Button
                android:id="@+id/Button1_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/backgroud"
                app:layout_constraintRight_toLeftOf="@+id/Button2_id"
                app:layout_constraintLeft_toLeftOf="@id/Button_id"
                app:layout_constraintTop_toTopOf="@id/Button_id"
                android:layout_marginRight="10dp">
            </Button>
            <Button
                android:id="@+id/Button2_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/backgroud"
                android:layout_marginLeft="10dp"
                app:layout_constraintLeft_toRightOf="@id/Button1_id"
                app:layout_constraintRight_toRightOf="@id/Button_id"
                app:layout_constraintTop_toTopOf="@id/Button_id"
                tools:layout_editor_absoluteY="0dp">
            </Button>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>

